--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -1,3 +1,245 @@
 {{!-- Inner --}}
 <img src="/img/inner-servicios-kino.jpg" alt="" class="inner__con">
 {{!-- Fin Inner --}}
+
+{{!-- Title --}}
+<div class="ser">
+    <div class="container">
+        <div class="ser__header">
+            <h1>Servicios digitales | K1n0.com</h1>
+            <p>
+                Conoce lo último en <strong>servicios de comunicación digital</strong> para tu negocio, con un equipo
+                profesional
+                y con herramientas de última tecnología.
+            </p>
+        </div>
+
+        <div class="ser__body">
+            <div class="container">
+
+                <div class="basics">
+                    <h2>Servicios Profesionales</h2>
+                    <p><i>Proyectos robustos de mediano y largo plazo para el éxito de tu negocio/empresa</i></p>
+                </div>
+
+                <div class="ser__item">
+
+                    <div class="serv__img">
+                        <img src="/img/services/pages-design.png" alt="">
+                    </div>
+
+                    <div class="serv__txt">
+                        <div class="serv--title">
+                            <h3>Ilustración y Diseño Gráfico Profesional</h3>
+                            <p>
+                                <i>Tu negocio y tus productos deben verse bien</i>
+                            </p>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
+                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
+                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <div class="serv__icons">
+                            <img src="/img/services/draw-design.png" alt="" class="icon--items">
+                        </div>
+                        <div class="serv__link">
+                            {{#if user}}
+                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            {{else}}
+                            <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                            {{/if}}
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="ser__item">
+
+                    <div class="serv__img">
+                        <img src="/img/services/pages-develop.png" alt="">
+                    </div>
+
+                    <div class="serv__txt">
+                        <div class="serv--title">
+                            <h3>Desarrollo Web y Aplicaciones Android/iOs</h3>
+                            <p>
+                                <i>Tu negocio y tus productos en Internet</i>
+                            </p>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
+                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
+                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <div class="serv__icons">
+                            <img src="/img/services/draw-dev.png" alt="" class="icon--items">
+                        </div>
+                        <div class="serv__link">
+                            {{#if user}}
+                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            {{else}}
+                            <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                            {{/if}}
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="ser__item">
+
+                    <div class="serv__img">
+                        <img src="/img/services/pages-video.png" alt="">
+                    </div>
+
+                    <div class="serv__txt">
+                        <div class="serv--title">
+                            <h3>Producción Fotográfica y Audiovisual</h3>
+                            <p>
+                                <i>La visibilidad de tu negocio en alta calidad</i>
+                            </p>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
+                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
+                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <div class="serv__icons">
+                            <img src="/img/services/draw-vid.png" alt="" class="icon--items">
+                        </div>
+                        <div class="serv__link">
+                            {{#if user}}
+                            <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                            {{else}}
+                            <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                            {{/if}}
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="basics">
+                    <h2>Servicios Básicos</h2>
+                    <p><i>Proyectos específicos de corto y mediano plazo para darle lugar a tus productos y servicios en Internet</i></p>
+                </div>
+
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="ser__item">
+
+                                <div class="serv__img">
+                                    <img src="/img/services/pages-posit.png" alt="">
+                                </div>
+
+                                <div class="serv__txt">
+                                    <div class="serv--title">
+                                        <h3>Posicionamiento SEO/SEM</h3>
+                                        <p>
+                                            <i>Tu web en el primer lugar</i>
+                                        </p>
+                                    </div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
+                                        placeat
+                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
+                                        debitis
+                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <div class="serv__icons">
+                                        <img src="/img/services/draw-pos.png" alt="" class="icon--items">
+                                    </div>
+                                    <div class="serv__link">
+                                        {{#if user}}
+                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        {{else}}
+                                        <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                                        {{/if}}
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="ser__item">
+
+                                <div class="serv__img">
+                                    <img src="/img/services/pages-social.png" alt="">
+                                </div>
+
+                                <div class="serv__txt">
+                                    <div class="serv--title">
+                                        <h3>Community Management</h3>
+                                        <p>
+                                            <i>Las comunidades de tu negocio al alcance</i>
+                                        </p>
+                                    </div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
+                                        placeat
+                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
+                                        debitis
+                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <div class="serv__icons">
+                                        <img src="/img/services/draw-soc.png" alt="" class="icon--items">
+                                    </div>
+                                    <div class="serv__link">
+                                        {{#if user}}
+                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        {{else}}
+                                        <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                                        {{/if}}
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="ser__item">
+
+                                <div class="serv__img">
+                                    <img src="/img/services/pages-planning.png" alt="">
+                                </div>
+
+                                <div class="serv__txt">
+                                    <div class="serv--title">
+                                        <h3>Planeación y Comunicación Organizacional</h3>
+                                        <p>
+                                            <i>Organizamos tu negocio desde adentro</i>
+                                        </p>
+                                    </div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
+                                        placeat
+                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
+                                        debitis
+                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <div class="serv__icons">
+                                        <img src="/img/services/draw-org.png" alt="" class="icon--items">
+                                    </div>
+                                    <div class="serv__link">
+                                        {{#if user}}
+                                        <p>Solicita este servicio <a href="/links/add">Aquí</a></p>
+                                        {{else}}
+                                        <p>Solicita este servicio <a href="/signup">Aquí</a></p>
+                                        {{/if}}
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
+                </div>
+
+                <div class="serv__end">
+                    {{#if user}}
+                    <a href="/profile"><h4>Regístrate en K1n0com</h4></a>
+                    {{else}}
+                    <a href="/signup"><h4>Regístrate en K1n0com</h4></a>
+                    {{/if}}
+                    <p><i>Y solicita cualquiera de nuestros servicios <strong>¡las 24 horas!</strong></i></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+{{!-- Fin Title --}}
