--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -45,13 +45,13 @@
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://linkedin.com/">
-                                <img src="/img/linked.png" alt="">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://wa.link/ra2121">
+                                <img src="/img/ws-white.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://instagram.com/">
-                                <img src="/img/insta.png" alt="">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://goo.gl/maps/692mg6D97drvYrQt9">
+                                <img src="/img/pointer-dos.png" alt="">
                             </a>
                         </li>
                     </ul>
@@ -68,6 +68,11 @@
                     </a>
                 </div>
             </div>
+            
         </div>
     </div>
+
+    <p class="footer__right">
+        Todos los derechos reservados - K1N0COM 2021
+    </p>
 </div>
