--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -9,22 +9,22 @@
         <div class="carousel-item active">
             <img src="/img/kino-bg-a.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                <h5>Diseño e ilustración</h5>
+                <p>Diseño profesional, personalizado y con calidad de punta.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="/img/kino-bg-b.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h5>Planeación y Comunicación</h5>
+                <p>Planes de comunicación estratégicos para el rendimiento de cualquier compañía.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="/img/kino-bg-c.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                <h5>Desarrollo Web y App's</h5>
+                <p>Funcionalidad, navegación y velocidad en todos tus sistemas.</p>
             </div>
         </div>
     </div>
@@ -49,11 +49,11 @@
             <div class="txt__header">
                 <h1>K1n0c0m</h1>
                 <h2>Servicios Web y Comunicaciones</h2>
-                <p>En Medellín</p>
+                <p><i>En Medellín</i></p>
             </div>
             <div class="txt__body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, suscipit perspiciatis debitis placeat
-                    fugiat totam assumenda ullam.<br><br>
+                <p>Servicios Web y planes de Comunicación con orientación a la experiencia
+                    del usuario final para grandes, pequeñas y medianas empresas.<br><br>
                     Conoce más de nosotros <a href="#">Aquí</a>
                 </p>
             </div>
@@ -236,10 +236,10 @@
 
             <div class="body__section">
                 <h3>Contáctanos</h3>
-                <a href="/contacto">
+                <a href="https://wa.link/ra2121">
                     <img src="/img/whats.png" alt="" class="sol__img">
                 </a>
-                <p>Comunícate a cualquiera de nuestras líneas de atención y solicita un ticket de asesoramiento
+                <p>Comunícate a nuestra línea de atención en Whatsapp y pide un ticket de asesoramiento<br>
                     <strong>¡sin costo alguno!</strong> </p>
             </div>
 
