--- a/src/public/sass/_home.scss
+++ b/src/public/sass/_home.scss
@@ -40,6 +40,11 @@ a {
     z-index: 0;
 }
 
+.inner__con {
+    position: relative;
+    width: 100%;
+}
+
 .ados {
     color: $gris;
     text-decoration: none;
@@ -56,6 +61,7 @@ a {
 
 .intro {
     padding: 60px 20px 20px 20px;
+    margin-top: 40px;
     .container {
         display: flex;
         justify-content: center;
