--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,7 +14,7 @@
     <meta property="og:local" content="es_LA">
     {{!-- SEO --}}
     <meta name="description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
+        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
     <meta name="keywords"
         content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
     {{!-- Título --}}
